--- a/.github/workflows/codetest.yml
+++ b/.github/workflows/codetest.yml
@@ -1,6 +1,10 @@
 name: Java Code Analysis
 
-on: pull_request
+on: 
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   checkstyle_job:
